fix(app/PageHeader): fix spacing

--- a/app/src/components/Chrome/PageHeader/PageHeader.scss
+++ b/app/src/components/Chrome/PageHeader/PageHeader.scss
@@ -8,6 +8,8 @@
     & &__menu-icon {
         height: 20px;
         min-width: 30px;
+        margin-left: 12px;
+        cursor: pointer;
     }
 
     &__logout-button {
